[EDP-DDM-20630] added generation of size constraint for char properties
Change-Id: Id49d6dd723d6f7e39eef9de0267b791c49f70790